--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Next Level GT proto site",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
