--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.1",
-    "express-basic-auth": "^0.2.3"
+    "basic-auth": "^1.1.0",
+    "express": "^4.14.1"
   }
 }
